--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: scMultiome
 Title: Collection of Public Single-Cell Multiome (scATAC + scRNAseq) Datasets
 Version: 0.99.5
 Authors@R: c(
-    person(given = "Xiaosai", family ="Yao", email = "yao.xiaosai@gene.com", role = c("cre","aut")),
+    person(given = "Xiaosai", family ="Yao", email = "yao.xiaosai@gene.com", role = c("cre","aut"),  comment = c(ORCID = "0000-0001-9729-0726")),
     person(given = "Aleksander", family ="Chlebowski", email = "aleksander.chlebowski@contractors.roche.com", role = "aut"),
     person(given = "Aaron", family ="Lun", email = "lun.aaron@gene.com", role = "aut"),
     person(given = "Shiqi", family ="Xie", email = "xie.shiqi@gene.com", role = "ctb"),
@@ -49,6 +49,6 @@ VignetteBuilder:
 Config/testthat/edition: 3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.2
+RoxygenNote: 7.2.3
 biocViews: PackageTypeData, ExperimentHub, SingleCellData, ExpressionData,
     SequencingData, Homo_sapiens_Data, CellCulture, Tissue, GEO
