insert archR installation instructions

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -22,6 +22,7 @@ jobs:
           BiocManager::install(local_deps[local_deps %in% deps$package[deps$diff != 0]], Ncpu = 2L)
           BiocManager::install("ensembldb", Ncpu = 2L)
           remotes::install_cran('rcmdcheck', Ncpu = 2L)
+          devtools::install_github("GreenleafLab/ArchR", ref="master", repos = BiocManager::repositories())
         shell: Rscript {0}
 
       - name: Session info
