--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -18,7 +18,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          Sys.setenv("GITHUB_PAT", "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")
+          Sys.setenv(GITHUB_PAT = "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")
           local_deps <- remotes::local_package_deps(dependencies = TRUE)
           deps <- remotes::dev_package_deps(dependencies = TRUE, repos = BiocManager::repositories())
           BiocManager::install(local_deps[local_deps %in% deps$package[deps$diff != 0]], Ncpu = 2L)
