--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,7 @@ Authors@R: c(
 Description: Single cell multiome data, containing chromatin accessibility
     (scATAC-seq) and gene expression (scRNA-seq) information analyzed with
     the ArchR package and presented as MultiAssayExperiment objects.
-License: file LICENSE
+License: CC BY-SA 4.0
 Depends: 
     R (>= 4.3.0),
     AnnotationHub,
