--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,22 +1,20 @@
 Package: scMultiome
 Title: Collection of Public Single-Cell Multiome (scATAC + scRNAseq) Datasets
-Version: 1.0.0
+Version: 1.0.1
 Authors@R: c(
     person(given = "Xiaosai", family ="Yao", email = "xiaosai.yao@gmail.com", role = c("cre","aut"),  comment = c(ORCID = "0000-0001-9729-0726")),
     person(given = "Aleksander", family ="Chlebowski", email = "aleksander.chlebowski@contractors.roche.com", role = "aut"),
     person(given = "Aaron", family ="Lun", email = "lun.aaron@gene.com", role = "aut"),
     person(given = "Shiqi", family ="Xie", email = "xie.shiqi@gene.com", role = "ctb"),
-    person(given = "Tomasz", family = "Wlodarczyk", email = "tomasz.wlodarczyk@contractors", role = "aut"),
-    person(given = "Natalie", family = "Fox", email = "natalie.fox@roche.com", role = "aut")
+    person(given = "Tomasz", family = "Wlodarczyk", email = "tomasz.wlodarczyk@contractors", role = "aut")
   )
 Description: Single cell multiome data, containing chromatin accessibility
     (scATAC-seq) and gene expression (scRNA-seq) information analyzed with
     the ArchR package and presented as MultiAssayExperiment objects.
 License: CC BY-SA 4.0
 Depends: 
-    R (>= 4.3.0),
     AnnotationHub,
-    ExperimentHub,
+    ExperimentHub (>= 2.8.1),
     MultiAssayExperiment,
     SingleCellExperiment,
     SummarizedExperiment
