--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(saveExp)
 export(saveMAE)
 export(testFile)
 export(tfBinding)
+export(tfMotifs)
 export(uploadFile)
 exportMethods(saveExp)
 import(AnnotationHub)
